# OlfactionModelling

./: README.md
ModellingFigures/: OmissionModelling_ResultsPlan.odt
ModellingFigures/Main/: Percep_failure_vs_Assoc_failure_Odors_200sims_0cueHCs_Recuwgain1.8_noPercepNoise.txt  Percep_failure_vs_Assoc_failure_Odors_200sims_9cueHCs_langNetBgain1,2x_Recuwgain1,8_DF3,5.txt  Percep_failure_vs_Assoc_failure_Odors_200sims_9cueHCs_langNetBgain1,2x_Recuwgain1,8_DF3,5_run2.txt  Percep_failure_vs_Assoc_failure_Odors_50sims_9cueHCs_Recuwgain1.8.txt  RecallDescriptorsDict_200Sims_0cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5_noPercepNoise.pkl  RecallDescriptorsDict_200Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5.pkl  RecallDescriptorsDict_200Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5_run2.pkl  RecallDescriptorsDict_50Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5.pkl  RecallStateRate_200Sims_0cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5_noPercepNoise.txt  RecallStateRate_200Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5.txt  RecallStateRate_200Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5_run2.txt  RecallStateRate_50Sims_9cueHCs_LangNetBgain1,2x_Recuwgain1.8_DF3,5.txt  RecallStateSims_200Sims_0cueHCs_LangNetBgain1,2x__Recuwgain1.8_DF3,5_noPercepNoise.txt  (+3 more)
PatternGeneration/: gmc_plotting.py  gmc_v2.py
PatternGeneration/GMCPatterns/: multi_D0_npat149_emax05.json  (+135 more)
works/: CMakeLists.txt  Readme_cmake.txt  Readme_serial.txt
works/papps/shclass/: CMakeLists.txt  shclass_cmp.ppar  shclass_mnist.par  shclass_rnd01.par  shclass_tinymnist.par  shclassmain1.cpp  shclassmain1.par  shclassmain2.cpp
works/papps/shmemmnist/: CMakeLists.txt  shmemmnistmain1.cpp  shmemmnistmain1.par
works/psrc/: CMakeLists.txt  Makefile  PAxons.cpp  PAxons.h  PGlobals.cpp  PGlobals.h  PIO.cpp  PIO.h  PLogger.cpp  PLogger.h  PPobjR.cpp  PPobjR.h  PPopH.cpp  PPopH.h  PPopR.cpp  PPopR.h  PPrj.cpp  PPrj.h  PPrjH.cpp  PPrjH.h  PPrjR.cpp  PPrjR.h  pbcpnnsim.h
works/src/: BCC.cpp  BCC.h  BCU.cpp  BCU.h  CMakeLists.txt  DataFactory.cpp  DataFactory.h  Globals.cpp  Globals.h  HCU.cpp  HCU.h  Logger.cpp  Logger.h  Parseparam.cpp  Parseparam.h  Pop.cpp  Pop.h  PopH.cpp  PopH.h  Prj.cpp  Prj.h  PrjH.cpp  PrjH.h  Timer.cpp  Timer.h  bcpnnsim.h
(+200 files in other folders)
